--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 202507142044products_data.json filter=lfs diff=lfs merge=lfs -text
+"*.sqlite3" filter=lfs diff=lfs merge=lfs -text
 "db.sqlite3" filter=lfs diff=lfs merge=lfs -text
